lintian (2.5.15) UNRELEASED; urgency=low

  * collection/copyright-file:
    + [NT] Avoid creating an empty copyright file when it is
      not needed.

  * debian/dirs:
    + [NT] Remove /var/lib/lintian, we no longer use it.
  * debian/docs:
    + [NT] Add auto-generated API documentation.
  * debian/rules:
    + [NT] Generate API documentation during build.

 -- Niels Thykier <niels@thykier.net>  Sat, 29 Jun 2013 21:11:09 +0200

lintian (2.5.14) unstable; urgency=low

  * Summary of tag changes:
    + Removed:
      - upstream-version-not-numeric

  * checks/*:
    + [NT] Rename all checks to include the extension ".pm".
      (Closes: #710405)
    + [JW] Fix typos in several files.
  * checks/binaries.pm:
    + [NT] Also check for the presence of "mcount" to detect
      whether a binary was compiled with profiling.
      (Closes: #712124)
    + [NT] Ignore "teH" when checking for spelling mistakes in
      ELF binaries.  Thanks to Ryan Kavanagh for the report.
      (Closes: #711207)
  * checks/cruft.pm:
    + [NT] Revise a few tests that relied on file(1) on text files.
    + [NT] Apply patches from Bastien Roucariès to fix some false
      positives in the GDFL related checks.  (Closes: #711119)
    + [NT] Show the full path with source-contains-unsafe-symlink
      rather than just the "basename".
  * checks/fields.{desc,pm}:
    + [NT] Fix typo, thanks to Adrien Cunin.
    + [NT] Retire upstream-version-not-numeric which can no longer
      be emitted.  Versions that would previously trigger this tag
      will now trigger bad-version-number instead.
    + [NT] Properly quote package names used in regular expressions.
      Thanks to Mattias Ellert for the report.  (Closes: #714427)
  * checks/menus.pm:
    + [NT] Fix a bug in checking for symlinks that could possibly
      make lintian follow an unsafe symlink.  (CVE-2013-1429)

  * coll/*:
    + [NT] Set "Auto-Remove: yes" on several collections to
      reduce the "inode pressure" on lintian.d.o.